4_Kubernetes/LetsKube/Kubernetes/cube1/rabbitmq-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: rabbitmq
  namespace: lets-kube
spec:
  type: ExternalName
  externalName: rabbitmq.graylog.svc.cluster.local
