4_Kubernetes/LetsKube/Kubernetes/cube1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lets-kube-cube1-svc
  namespace: lets-kube
spec:
  type: ClusterIP
  selector:
    app: lets-kube-cube1
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
